...
type SettingsStackParamList = {
  SettingsHome: undefined;
  License: undefined;
};

type RootTabParamList = {
  Journal: NavigatorScreenParams<JournalStackParamList>;
  Induction: NavigatorScreenParams<InductionStackParamList>;
  Pedia: NavigatorScreenParams<PediaStackParamList>;
  Settings: NavigatorScreenParams<SettingsStackParamList>;
};

const JournalStack = createNativeStackNavigator<JournalStackParamList>();
const InductionStack = createNativeStackNavigator<InductionStackParamList>();
const PediaStack = createNativeStackNavigator<PediaStackParamList>();
const SettingsStack = createNativeStackNavigator<SettingsStackParamList>();
...
